--- a/style.css
+++ b/style.css
@@ -81,11 +81,11 @@ border-radius: 10px;
    
 }
 .white{
-    color: gray;
+    color: white;
 }
 footer{
     
     text-align: center;
-    background-color:brown;
+    background-color:darkslategrey;
     
 }
